assets/css/style.css
/* ... */
#upper-left-welcome-slide {
	position: absolute;
	height: 100px;
	bottom: 0;
	right: 0;
}

#welcome-animation-upper-left h1 {
	position: absolute;
	bottom: 8rem;
	right: 2rem;
	font-size: 2rem;
}

#welcome-animation-upper-right {
	position: absolute;
	background-color: rgb(111, 155, 94);
	height: 50%;
	width: 50%;
	top: 0;
	right: 0px;
	z-index: 100;
	animation-name: welcome-slide-right;
	animation-delay: 2.1s;
	animation-duration: 2s;
	animation-fill-mode: forwards;
}

#upper-right-welcome-slide {
	position: absolute;
	height: 118px;
	bottom: 0;
	left: 0;
}

#welcome-animation-upper-right h1 {
	position: absolute;
	left: 2rem;
	bottom: 8rem;
	font-size: 2rem;
}

#welcome-animation-bottom-right {
	position: absolute;
	background-color: rgb(104, 182, 94);
	height: 50%;
	width: 50%;
	font-size: 3vw;
	bottom: 0;
	right: 0;
	z-index: 100;
	animation-name: welcome-slide-bottom;
	animation-delay: 2.3s;
	animation-duration: 2s;
	animation-fill-mode: forwards;
}

#bottom-right-welcome-slide {
	position: absolute;
	height: 100px;
	top: 0;
	left: 0;
}

#welcome-animation-bottom-right h1 {
	position: absolute;
	left: 20px;
	top: 8rem;
	left: 2rem;
	font-size: 2rem;
}

#welcome-animation-bottom-left {
	position: absolute;
	background-color: rgb(99, 143, 103);
	height: 50%;
	width: 50%;
	bottom: 0;
	left: 0;
	z-index: 100;
	font-size: 3vw;
	;
	animation-name: welcome-slide-left;
	animation-delay: 2.7s;
	animation-duration: 2s;
	animation-fill-mode: forwards;
}

#bottom-left-welcome-slide {
	position: absolute;
	height: 100px;
	top: 0;
	right: 0;
}

#welcome-animation-bottom-left h1 {
	position: absolute;
	right: 2rem;
	top: 8rem;
	font-size: 2rem;
}


/* header */

#header {
	position: fixed;
	top: 0;
	width: 100%;
	height: 6rem;
	text-transform: uppercase;
	background: linear-gradient(90deg, rgb(166, 201, 155) 0%, rgb(116, 199, 113) 46%, rgb(112, 216, 103) 100%);
	z-index: 99;
	display: grid;
	grid-template-columns: 1fr 3fr;
	max-width: 1200px;
}

#logo-big {
	font-size: medium;
	color: black;
	padding: 1rem 0 1rem 1rem;
	height: 70px;
	float: left;
	padding-left: 5px;
	text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.63);
}

#logo-big p {
	font-size: 1rem;
	text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.63);
}

#navigation-list {
	background-color: rgba(255, 255, 255, 0.877);
	width: 100%;
	min-width: 100%;
	list-style: none;
	font-size: 1.5rem;
	text-align: right;
	text-shadow: 0px 0px 4px rgb(205, 255, 217);
}

.nav-item {
	float: right;
	margin: 0 2rem;
	line-height: 6rem;
	font-weight: 300;
}


/* Dropdown screens under 650px */

#hamburger {
	margin-top: 1rem;
}

#dropdown-menu {
	display: none;
	text-align: right;
	padding-right: 1rem;
}

#dropdown-menu button {
	background-color: rgba(250, 235, 215, 0);
	color: grey;
	font-size: 3rem;
	border: none;
}

#dropdown-menu ul {
	position: absolute;
	top: 6rem;
	left: 0px;
	background-color: rgba(255, 255, 255, 0.822);
	width: 100%;
	list-style: none;
	font-size: 1rem;
	line-height: 0px;
	text-align: right;
	transition: 0.5s;
	opacity: 0;
}

#dropdown-menu a {
	letter-spacing: 0.5rem;
	text-align: right;
	padding-right: 1rem;
}


/* presentation */

#presentation-background {
	background-image:  linear-gradient(0deg, rgb(238, 238, 238) 0%, rgba(255, 255, 255, 0) 30%, rgb(255, 255, 255) 100%), url("../images/wood-plants.webp");
	background-size: cover;
	margin-top: 4rem;
	min-height: 100%;
	padding: 8rem 3rem 10rem 8rem;

	
}

#presentation-container {
	background-color: rgba(43, 204, 65, 0.856);
	border-radius: 1rem;
	max-width: 60rem;
	box-shadow: 10px 10px 20px black;
}

#presentation-text h2 {
	font-weight: 400;
	line-height: normal;
	text-align: center;
	color: rgb(0, 41, 2);
	background-color: rgba(0, 0, 0, 0);
}
#presentation-text {
	position: relative;
	text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.63);
	font-size: 1rem;
	padding: 2rem;
	font-weight: 400;
	line-height: 1.6rem;
}

#text-yellow-presentation {
	color: gold;
	text-shadow: 4px 4px 10px black;
}

#text-red-presentation {
	color: rgb(255, 0, 0);
	text-shadow: 4px 4px 10px black;
}




#plant-guy-image {
	height: 26rem;
}

#owner-picture-container {
	float: left;
	height: 13rem;
	width: 13rem;
	border-radius: 50%;
	overflow: hidden;
	box-shadow: 20px 5px 50px black;
	margin-right: 2rem;
	margin-left: -8rem;
	margin-top: -4rem;
}

#quote-div{
	background-image:  linear-gradient(180deg, rgb(238, 238, 238) 0%, rgba(255, 255, 255, 0) 20%, rgba(60, 187, 60, 0.623) 100%);
	height: 9rem;
	padding-top: 40px;
}

#quote-text{
	line-height: 8rem;
	font-size: 1.5rem;
	text-align: center;
	text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.329);
	letter-spacing: 0.5vw;
	font-weight: 200;
	animation-name: slider;
	animation-duration: 10s;
	animation-fill-mode: forwards;
	animation-iteration-count: infinite;
}

.green-text{
	color: rgb(21, 177, 0);
	font-weight: 500;
	font-size: 2rem;
}

/* products */

#arrow-down {
	color: rgb(101, 202, 88);
	text-align: right;
	position: absolute;
	right: 50%;
	padding-top: 1rem;
	font-size: 5rem;
	animation-name: arrow-movement;
	animation-duration: 2s;
	animation-fill-mode: both;
	animation-iteration-count: infinite;
	text-shadow: 4px 4px 10px black;
}

#products-grid-container {
	position: relative;
	width: 100%;
	display: grid;
	grid-template-columns: 2fr 2fr 1fr;
	grid-template-areas: "a a a" "c d e" "g h i" "k l m";
	text-align: center;
}

.section-logo {
	line-height: 4rem;
	letter-spacing: 8px;
	font-size: 1.5rem;
	grid-area: a;
	text-align: center;
	text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
}

#product-1 {
	grid-area: c;
}

#product-1-info {
	text-align: left;
	grid-area: d;
	text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
}

#product-1-info p {
	padding-left: 1rem;
}

#product-1-buy {
	grid-area: e;
}

.grey-top-line {
	background-color: rgba(0, 0, 0, 0.26);
	height: 2rem;
	width: 100%;
}

.grey-bottom-line {
	background-color: rgba(201, 21, 21, 0);
	height: 2rem;
	width: 100%;
}

#product-2 {
	grid-area: g;
}
/* ... */

